--- a/DayZServer/MainWindow.xaml
+++ b/DayZServer/MainWindow.xaml
@@ -19,7 +19,7 @@
     <Grid>
 
         <Image HorizontalAlignment="Left" Height="350" VerticalAlignment="Top" Width="580" Source="images/1.png"/>
-        <TextBox x:Name="serverTextBox" HorizontalAlignment="Left" Height="48" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="557" Background="{x:Null}" FontSize="18" Foreground="White" BorderBrush="{x:Null}"/>
+        <TextBox x:Name="serverTextBox" HorizontalAlignment="Left" Height="48" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="485" Background="{x:Null}" FontSize="18" Foreground="White" BorderBrush="{x:Null}"/>
         <Label Content="Standalone Version" HorizontalAlignment="Left" Margin="324,322,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="White" FontSize="14" Width="129" HorizontalContentAlignment="Right"/>
         <Label x:Name="versionlabel" Content="" HorizontalAlignment="Left" Margin="453,322,0,0" VerticalAlignment="Top" Foreground="White" Background="{x:Null}" FontSize="14" Width="114"/>
 
@@ -40,12 +40,23 @@
                     </LinearGradientBrush>
                 </Ellipse.Stroke>
             </Ellipse>
+
         </Canvas>
 
         <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" Margin="23,74,24,145">
             <TextBlock x:Name="serverList" TextWrapping="Wrap" VerticalAlignment="Top" Width="535" Foreground="White" Background="{x:Null}" FontSize="14"  AllowDrop="False" HorizontalAlignment="Left" TextAlignment="Justify"/>
         </ScrollViewer>
-        <Button x:Name="clear_button" Content="Clear History" Canvas.Left="77" Canvas.Top="286" Width="182" Background="#FF6F0000" Foreground="White" Click="ClearHistory" FontSize="18" BorderBrush="{x:Null}" Margin="70,253,330,70"/>
+        <Button x:Name="remove_button" Content="Clear History" Click="ClearHistory" HorizontalAlignment="Left" Margin="106,254,0,0" VerticalAlignment="Top" Width="130" Height="37" FontSize="18" BorderBrush="{x:Null}" Background="#FFF0F0F0" Foreground="#FF680000"/>
+        <Button x:Name="join_button" Content="Join" Height="37" Background="#FFF0F0F0" Foreground="#FF6F0000" Click="JoinServer" FontSize="18" BorderBrush="{x:Null}" Margin="507,10,15,305"/>
+
+
+        <Canvas x:Name="browse_dialog" Height="207" Canvas.Left="28" Canvas.Top="58" Width="516" Background="#FFF0F0F0" Margin="42,84,24,72" Visibility="Hidden">
+            <Button x:Name="cancel_button" Content="Cancel" Canvas.Left="364" Canvas.Top="160" Width="142" Height="37" Click="cancel_click" FontSize="18" BorderBrush="{x:Null}"/>
+            <TextBox Height="66" Canvas.Left="10" TextWrapping="Wrap" Text="Browse and find the location of DayZ.exe and try again. &#xA;The game should be in the steam folder &#xA;\Steam\SteamApps\common\DayZ\DayZ.exe" Canvas.Top="50" Width="496" Background="{x:Null}" Foreground="#FF6A6A6A" FontSize="16" BorderBrush="{x:Null}"/>
+            <TextBox Height="33" Canvas.Left="10" TextWrapping="Wrap" Text="Unable to locate where you installed DayZ" Canvas.Top="12" Width="496"  Background="{x:Null}" Foreground="#FF3E3E3E" FontSize="18" BorderBrush="{x:Null}"/>
+            <Button x:Name="browse" Content="Browse" Canvas.Left="364" Canvas.Top="118" Width="142" Height="37" Click="browse_click" FontSize="18" BorderBrush="{x:Null}"/>
+        </Canvas>
+
     </Grid>
 
 </Window>
