--- a/DayZServer/App.xaml
+++ b/DayZServer/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="DayZServer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="ServerList.xaml">
     <Application.Resources>
          
     </Application.Resources>
