--- a/DayZServer/MainWindow.xaml
+++ b/DayZServer/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DayZServer.MainWindow"
+﻿<Window x:Class="Steam.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="DayZ Server" Height="392" Width="588" Background="Black" ResizeMode="NoResize" Icon="images/icon.png">
