--- a/DayZServer/App.xaml
+++ b/DayZServer/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="Steam.App"
+﻿<Application x:Class="DayZServer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
