--- a/DayZServer/ServerList.xaml
+++ b/DayZServer/ServerList.xaml
@@ -1,11 +1,80 @@
 ﻿<Window x:Class="DayZServer.Window1"
-
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Title="DayZServer" Width="1024" Height="768" WindowStartupLocation="Manual" WindowState="Maximized" Icon="images/icon.png" xmlns:local="DayZServer">
 
-        Title="DayZServer" Width="1024" Height="768" WindowStartupLocation="Manual" WindowState="Maximized" Icon="images/icon.png">
-
+    <Window.Resources>
+        <!--<Style TargetType="Button" x:Key="firstStyle">
+            <Setter Property="Background">
+                <Setter.Value>
+                    <ImageBrush ImageSource="images/checkon.png" Stretch="Uniform"/>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="BorderBrush" Value="{x:Null}"/>
+        </Style>-->
+        <Style x:Key="firstStyle" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" 
+                        BorderThickness="0" 
+                        Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="BorderBrush">
+                                    <Setter.Value>
+                                        <ImageBrush ImageSource="images/checkoff.png" Stretch="Uniform"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="True">
+                                <Setter Property="BorderBrush">
+                                    <Setter.Value>
+                                        <ImageBrush ImageSource="images/checkoff.png" Stretch="Uniform"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="deleteStyle" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" 
+                        BorderThickness="0" 
+                        Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="BorderBrush">
+                                    <Setter.Value>
+                                        <ImageBrush ImageSource="images/deleteon.png" Stretch="Uniform"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="True">
+                                <Setter Property="BorderBrush">
+                                    <Setter.Value>
+                                        <ImageBrush ImageSource="images/deleteoff.png" Stretch="Uniform"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
 
 
     <DockPanel Margin="0,0,2,0">
@@ -26,112 +95,92 @@
             </ToolBar>
         </ToolBarTray>
 
-
-
-        <DataGrid  Name="severList" CanUserAddRows="False" AutoGenerateColumns="False" GridLinesVisibility="None" CanUserReorderColumns="True" CanUserResizeColumns="True" CanUserResizeRows="False" CanUserSortColumns="True" BorderBrush="{x:Null}" DockPanel.Dock="Top">
-
+        <DataGrid  Name="severList" CanUserAddRows="False" AutoGenerateColumns="False"  GridLinesVisibility="None" CanUserReorderColumns="True" CanUserResizeColumns="True" CanUserResizeRows="False" CanUserSortColumns="True" BorderBrush="{x:Null}" DockPanel.Dock="Top" HorizontalGridLinesBrush="{x:Null}" VerticalGridLinesBrush="{x:Null}" AlternatingRowBackground="#FFF3F3F3" SelectionMode="Single" SelectionUnit="CellOrRowHeader">
             <DataGrid.Columns>
-
                 <DataGridTemplateColumn Header="Server Name" Width="auto" SortMemberPath="ServerName" IsReadOnly="True" MinWidth="500">
-
                     <DataGridTemplateColumn.CellTemplate>
-
                         <DataTemplate>
-
                             <TextBlock Text="{Binding ServerName}" Foreground="#FF5B5B5B" Cursor="Hand" FontSize="18" Margin="10,10,0,10" />
-
                         </DataTemplate>
-
                     </DataGridTemplateColumn.CellTemplate>
-
                 </DataGridTemplateColumn>
-
                 <DataGridTemplateColumn Header="IP Address" Width="150" SortMemberPath="IP_Address">
-
                     <DataGridTemplateColumn.CellTemplate>
-
                         <DataTemplate>
-
                             <TextBlock Text="{Binding IP_Address}" Foreground="#FF5B5B5B" Cursor="Hand" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" />
-
                         </DataTemplate>
-
                     </DataGridTemplateColumn.CellTemplate>
-
                 </DataGridTemplateColumn>
-
                 <DataGridTemplateColumn Header="Date" Width="150"  SortMemberPath="Date" SortDirection="Descending">
-
                     <DataGridTemplateColumn.CellTemplate>
-
                         <DataTemplate>
-
                             <TextBlock Text="{Binding Date}" Foreground="#FF9B9B9C" Cursor="Hand" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" />
-
                         </DataTemplate>
-
                     </DataGridTemplateColumn.CellTemplate>
-
                 </DataGridTemplateColumn>
-
                 <DataGridTemplateColumn Width="100">
-
                     <DataGridTemplateColumn.CellTemplate>
-
                         <DataTemplate>
-
                             <Button Click="Join_Click" Content="Join" Height="25" VerticalAlignment="Center" Width="75" BorderBrush="{x:Null}" Tag="{Binding IP_Address}" Foreground="#FF919191"/>
-
                         </DataTemplate>
-
                     </DataGridTemplateColumn.CellTemplate>
-
                 </DataGridTemplateColumn>
-
-                <DataGridTemplateColumn Width="100">
-
+                <DataGridTemplateColumn Width="100" SortMemberPath="Favorite" Header="Favorite">
                     <DataGridTemplateColumn.CellTemplate>
-
                         <DataTemplate>
-
-                            <!--<ToggleButton x:Name="pbStations" Template="{StaticResource ContentOnlyTemplateToggleButton}">
-
-                                    <Image Margin="2" Stretch="Uniform" x:Name="img">
-
-                                        <Image.Style>
-
-                                            <Style TargetType="Image">
-
-                                                <Style.Triggers>
-
-                                                    <DataTrigger Binding="{Binding ElementName=pbStations,Path=IsChecked}" Value="True">
-
-                                                    <Setter Property="Source" Value="images/checkmarkon.png" />
-
-                                                    </DataTrigger>
-
-                                                    <DataTrigger Binding="{Binding ElementName=pbStations,Path=IsChecked}" Value="False">
-
-                                                    <Setter Property="Source" Value="images/checkmarkoff.png" />
-
-                                                    </DataTrigger>
-
-                                                </Style.Triggers>
-
-                                            </Style>
-
-                                        </Image.Style>
-
-                                    </Image>
-
-                            </ToggleButton>-->
-
+                            <Button x:Name="favoriteButton" Height="32" Click="favorite_Click" Tag="{Binding}" VerticalAlignment="Center" Width="32">
+                                <Button.Style>
+                                    <Style TargetType="Button" BasedOn="{StaticResource firstStyle}">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Favorite}" Value="1">
+                                                <Setter Property="Background">
+                                                    <Setter.Value>
+                                                        <ImageBrush ImageSource="images/checkon.png" Stretch="Uniform"/>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Favorite}" Value="0">
+                                                <Setter Property="Background">
+                                                    <Setter.Value>
+                                                        <ImageBrush ImageSource="images/checkoff.png" Stretch="Uniform"/>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Button.Style>
+                            </Button>
                         </DataTemplate>
-
                     </DataGridTemplateColumn.CellTemplate>
-
                 </DataGridTemplateColumn>
-
+                <DataGridTemplateColumn Width="100" Header="Delete">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button x:Name="deleteButton" Height="32" Click="delete_Click" Tag="{Binding}" VerticalAlignment="Center" Width="32">
+                                <Button.Style>
+                                    <Style TargetType="Button" BasedOn="{StaticResource deleteStyle}">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Current}" Value="1">
+                                                <Setter Property="Background">
+                                                    <Setter.Value>
+                                                        <ImageBrush ImageSource="images/deleteoff.png" Stretch="Uniform"/>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Current}" Value="0">
+                                                <Setter Property="Background">
+                                                    <Setter.Value>
+                                                        <ImageBrush ImageSource="images/deleteon.png" Stretch="Uniform"/>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Button.Style>
+                            </Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
 
         </DataGrid>
@@ -148,7 +197,6 @@
             <StackPanel Height="40" Canvas.Left="197" Canvas.Top="158" Width="220" Orientation="Horizontal">
                 <Button Content="Login"  Height="35" BorderBrush="{x:Null}" Width="100" Margin="0,2,15,2" FontSize="18" Foreground="#FF636363" Click="login_click"/>
                 <Button Content="Cancel" Height="35" BorderBrush="{x:Null}" Width="100" Margin="0,2" FontSize="18" Foreground="#FF636363" Click="cancelLogin_Click"/>
-
             </StackPanel>
             <Canvas Height="47" Width="440">
                 <Image Source="images/globalheader_logo.png" HorizontalAlignment="Right" Height="47" Width="111" Canvas.Left="319" />
@@ -160,20 +208,8 @@
                         <GradientStop Color="#FF47661F" Offset="1"/>
                     </LinearGradientBrush>
                 </Canvas.Background>
-
             </Canvas>
-
-
         </Canvas>
-
-
-
-
-
-
-
-
-
     </DockPanel>
 
 </Window>
