--- a/DayZServer/ServerList.xaml
+++ b/DayZServer/ServerList.xaml
@@ -9,11 +9,11 @@
             <Setter Property="AutoGenerateColumns" Value="False"/>
         </Style>
         <Style TargetType="{x:Type DataGridRow}">
-            <Style.Triggers>
+            <!--<Style.Triggers>
                 <DataTrigger Binding="{Binding Current}" Value="1">
                     <Setter Property="Background" Value="#f2f9fc" />
                 </DataTrigger>
-            </Style.Triggers>
+            </Style.Triggers>-->
             <Style.Resources>
                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
                 <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
@@ -123,10 +123,10 @@
                     </Button>
                     <DataGrid x:Name="userList" Height="318" Width="117" AutoGenerateColumns="False" CanUserAddRows="False"  GridLinesVisibility="None" CanUserReorderColumns="True" CanUserResizeColumns="True" CanUserResizeRows="False" CanUserSortColumns="True" BorderBrush="{x:Null}" HorizontalGridLinesBrush="{x:Null}" VerticalGridLinesBrush="{x:Null}" SelectionMode="Single" SelectionUnit="CellOrRowHeader" Background="{x:Null}" Canvas.Top="55">
                         <DataGrid.Columns>
-                            <DataGridTemplateColumn Width="108"  Header="Players" SortMemberPath="UserName" SortDirection="Ascending">
+                            <DataGridTemplateColumn Width="90"  Header="Players" SortMemberPath="UserName" SortDirection="Ascending">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Button Click="Link_Click" Tag="{Binding Href}"   Width="107" Height="30" Cursor="Hand" Content="{Binding UserName}" BorderBrush="{x:Null}" FontSize="11" Foreground="#FF5B5B5B" Padding="5,1,0,1" HorizontalContentAlignment="Left" Background="{x:Null}" />
+                                        <Button Click="Link_Click" Tag="{Binding Href}"   Width="90" Height="30" Cursor="Hand" Content="{Binding UserName}" BorderBrush="{x:Null}" FontSize="11" Foreground="#FF5B5B5B" Padding="5,1,0,1" HorizontalContentAlignment="Left" Background="{x:Null}" />
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -143,12 +143,28 @@
         </Canvas>
 
 
-        <DataGrid  Name="severList" SelectedIndex="{Binding AssetMainGridSelectedIndex,Mode=TwoWay}" CanUserAddRows="False"  GridLinesVisibility="None" CanUserReorderColumns="True" CanUserResizeColumns="True" CanUserResizeRows="False" CanUserSortColumns="True" BorderBrush="{x:Null}" DockPanel.Dock="Top" HorizontalGridLinesBrush="{x:Null}" VerticalGridLinesBrush="{x:Null}" SelectionMode="Single" SelectionUnit="CellOrRowHeader">
+        <DataGrid  Name="serverList" SelectedIndex="{Binding AssetMainGridSelectedIndex,Mode=TwoWay}" CanUserAddRows="False"  GridLinesVisibility="None" CanUserReorderColumns="True" CanUserResizeColumns="True" CanUserResizeRows="False" CanUserSortColumns="True" BorderBrush="{x:Null}" DockPanel.Dock="Top" HorizontalGridLinesBrush="{x:Null}" VerticalGridLinesBrush="{x:Null}" SelectionMode="Single" SelectionUnit="CellOrRowHeader">
             <DataGrid.CellStyle>
                 <Style TargetType="DataGridCell">
                     <Setter Property="BorderThickness" Value="0"/>
                 </Style>
             </DataGrid.CellStyle>
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <Style.Resources>
+                        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
+                        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
+                        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Transparent" />
+                        <SolidColorBrush x:Key="{x:Static SystemColors.ControlTextBrushKey}" Color="Transparent" />
+                        <SolidColorBrush x:Key="{x:Static SystemColors.InactiveBorderBrushKey}" Color="Transparent" />
+                    </Style.Resources>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Current}" Value="1">
+                            <Setter Property="Background" Value="#f2f9fc" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.RowStyle>
             <DataGrid.Columns>
                 <DataGridTemplateColumn Width="55" SortMemberPath="Favorite" Header="Favorite">
                     <DataGridTemplateColumn.CellTemplate>
@@ -199,17 +215,17 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Width="100">
+                <DataGridTemplateColumn Width="80">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Click="JoinServer" Content="Join" Height="25" VerticalAlignment="Center" Width="75" BorderBrush="{x:Null}" Tag="{Binding}" Foreground="#FF919191" Cursor="Hand" Padding="10,1,10,3"/>
+                            <Button Click="JoinServer" Content="Join" Height="25" VerticalAlignment="Center" Width="60" BorderBrush="{x:Null}" Tag="{Binding}" Foreground="#FF919191" Cursor="Hand" Padding="10,1,10,3"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Width="100">
+                <DataGridTemplateColumn Width="80">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Click="server_Details" Content="Players" Height="25" VerticalAlignment="Center" Width="75" BorderBrush="{x:Null}" Tag="{Binding}" Foreground="#FF919191" Cursor="Hand" Padding="1,1,1,3">
+                            <Button Click="server_Details" Content="Players" Height="25" VerticalAlignment="Center" Width="60" BorderBrush="{x:Null}" Tag="{Binding}" Foreground="#FF919191" Cursor="Hand" Padding="1,1,1,3">
                                 <Button.Style>
                                     <Style TargetType="Button">
                                         <Style.Triggers>
