--- a/DayZServer/App.xaml
+++ b/DayZServer/App.xaml
@@ -1,7 +1,9 @@
 ﻿<Application x:Class="Steam.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="ServerList.xaml">
+             StartupUri="ServerList.xaml"
+             Exit="Application_Exit"
+             Startup="App_Startup">
     <Application.Resources>
          
     </Application.Resources>
